--- a/assets/scss/sc-login-btns.scss
+++ b/assets/scss/sc-login-btns.scss
@@ -9,5 +9,9 @@
     .socialify_shortcode_login__item {
         width: 33px;
         padding: 3px;
+
+        img {
+            width: 33px;
+        }
     }
 }
