--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,5 @@
   .socialify_shortcode_login .socialify_shortcode_login__item {
     width: 33px;
     padding: 3px; }
+    .socialify_shortcode_login .socialify_shortcode_login__item img {
+      width: 33px; }
