--- a/assets/scss/sc-login-btns.scss
+++ b/assets/scss/sc-login-btns.scss
@@ -7,7 +7,7 @@
     align-content: space-between;
 
     .socialify_shortcode_login__item {
-        width: 33px;
+//        width: 33px;
         padding: 3px;
 
         img {
