feat: enhance ConnectProviders shortcode with new layout and styling; add container and fieldset legend

--- a/assets/build.css
+++ b/assets/build.css
@@ -7,6 +7,7 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-2xl: 42rem;
   }
 }
 @layer components-socialify {
@@ -139,6 +140,101 @@
     background-color: var(--color-white);
     padding-inline: calc(var(--spacing) * 3) !important;
     color: var(--color-black);
+  }
+  .socialify-connect-providers {
+    max-width: var(--container-2xl);
+    border-radius: var(--radius-box);
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-base-300);
+    background-color: var(--color-white);
+    padding: calc(var(--spacing) * 4) !important;
+  }
+  .socialify-fieldset-legend {
+    margin-bottom: calc(0.25rem * -1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: calc(0.25rem * 2);
+    padding-block: calc(0.25rem * 2);
+    color: var(--color-base-content);
+    font-weight: 600;
+  }
+  .socialify-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-radius: var(--radius-box);
+    outline-width: 2px;
+    transition: outline 0.2s ease-in-out;
+    outline: 0 solid #0000;
+    outline-offset: 2px;
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+      @media (forced-colors: active) {
+        outline: 2px solid transparent;
+        outline-offset: 2px;
+      }
+    }
+    &:focus-visible {
+      outline-color: currentColor;
+    }
+    :where(figure:first-child) {
+      overflow: hidden;
+      border-start-start-radius: inherit;
+      border-start-end-radius: inherit;
+      border-end-start-radius: unset;
+      border-end-end-radius: unset;
+    }
+    :where(figure:last-child) {
+      overflow: hidden;
+      border-start-start-radius: unset;
+      border-start-end-radius: unset;
+      border-end-start-radius: inherit;
+      border-end-end-radius: inherit;
+    }
+    &:where(.socialify-card-border) {
+      border: var(--border) solid var(--color-base-200);
+    }
+    &:where(.socialify-card-dash) {
+      border: var(--border) dashed var(--color-base-200);
+    }
+    &.socialify-image-full {
+      display: grid;
+       > * {
+        grid-column-start: 1;
+        grid-row-start: 1;
+      }
+       > .socialify-card-body {
+        position: relative;
+        color: var(--color-neutral-content);
+      }
+      :where(figure) {
+        overflow: hidden;
+        border-radius: inherit;
+      }
+       > figure img {
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(28%);
+      }
+    }
+    figure {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &:has(> input:is(input[type="checkbox"], input[type="radio"])) {
+      cursor: pointer;
+      user-select: none;
+    }
+    &:has(> :checked) {
+      outline: 2px solid currentColor;
+    }
+    margin-block: calc(var(--spacing) * 5) !important;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 @layer base {
